# bgit

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  something.txt
.bgit/: config.toml
.bgit/hooks/: post_git_clone  pre_git_add  pre_git_commit
.github/workflows/: general.yml  release.yml
docs/: ARCHITECTURE.md  INSTALL.md  META.md  USAGE.md
docs/config/: CONFIGURATION.md  GLOBAL.md  REPO.md
docs/hooks/: HOOKS.md
docs/rules/: RULE_remote_exists.md
scripts/: install.ps1  install.sh
src/: bgit_error.rs  cmd.rs  config.rs  events.rs  llm_tools.rs  main.rs  rules.rs  step.rs  util.rs  workflow_queue.rs
src/auth/: auth_utils.rs  git_auth.rs  git_http.rs  git_ssh.rs  mod.rs  ssh_utils.rs
src/auth/create/: ssh.rs
src/auth/ssh/: agent.rs  mod.rs  ssh_utils.rs  unix.rs  unsupported.rs  windows.rs
src/cmd/: check.rs  create_creds.rs  default.rs  init.rs  log.rs
src/config/: global.rs  local.rs
src/constants/: mod.rs
src/events/: git_add.rs  git_branch.rs  git_clone.rs  git_commit.rs  git_config.rs  git_diff.rs  git_init.rs  git_log.rs  git_pull.rs  git_push.rs  git_restore.rs  git_stash.rs  git_status.rs
src/flags/: config_flag.rs  mod.rs
src/hook_executor/: error.rs  process.rs  unix.rs
src/llm_tools/: conventional_commit_tool.rs
src/rules/: a01_git_install.rs  a02_git_name_email_setup.rs  a12_no_secrets_staged.rs  a12b_no_secret_files_staged.rs  a14_big_repo_size.rs  a16_no_large_file.rs  a17_conventional_commit_message.rs  a18_remote_exists.rs
src/utils/: git_auth.rs  mod.rs
src/workflows/default/action/: mod.rs  ta01_is_git_repo.rs  ta02_has_stash.rs  ta03_pop_stash.rs  ta04_has_unstaged.rs  ta05_add_to_stage.rs  ta06_restore_changes.rs  ta07_has_uncommitted.rs  ta08_is_pulled_pushed.rs  ta09_pull_push.rs  ta10_is_branch_main.rs  ta11_is_sole_contributor.rs  ta12_move_changes.rs  ta13_ai_commit_msg.rs
src/workflows/default/prompt/: mod.rs  pa01_ask_to_init_clone_git.rs  pa02_ask_to_clone_git.rs  pa03_init_git_repo.rs  pa04_ask_pop_stash.rs  pa05_ask_to_add.rs  pa05x_ask_add_mode.rs  pa06_ask_restore_changes.rs  pa07_ask_pull_push.rs  pa08_ask_commit.rs  pa09_ask_branch_name.rs  pa10_ask_same_feat.rs  pa11_ask_ai_commit_msg.rs  pa12_ask_commit_msg.rs  pa13_pull_push.rs  pa14_ai_commit_msg.rs
tests/utils/: mod.rs  prevalidation.rs  test_env.rs
