[package]
name = "bgit"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = [
    "rootCircle <dev.frolics@gmail.com>",
    "Gyan172004 <gkoncs@gmail.com>",
    "Sidharth-Singh10 <sidharthsingh714@gmail.com>",
]
repository = "https://github.com/rootCircle/bgit"
description = "User-friendly Git wrapper for beginners, automating essential tasks like adding, committing, and pushing changes. It includes smart rules to avoid common pitfalls, such as accidentally adding sensitive files or directories and has exclusive support for portable hooks!"
categories = [
    "development-tools::testing",
    "command-line-utilities",
    "development-tools",
]
keywords = ["git", "beginner-friendly", "libgit-rs", "hooks", "smart-rules"]
rust-version = "1.85"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
clap_complete = "4.5.55"
colored = "3.0.0"
dialoguer = "0.11.0"
git2 = "0.20.2"
indicatif = "0.18.0"
google-generative-ai-rs = { version = "0.3.4", features = ["beta"] }
tokio = { version = "1.47.1", features = ["full"] }
regex = "1.11.1"
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.4"
serde_json = "1.0.142"

[dev-dependencies]
tempfile = "3.20.0"
assert_cmd = "2.0.17"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
