[package]
name = "bgit"
version = "0.4.0"
edition = "2024"
license = "MIT"
authors = [
    "rootCircle <dev.frolics@gmail.com>",
    "Gyan172004 <gkoncs@gmail.com>",
    "Sidharth-Singh10 <sidharthsingh714@gmail.com>",
]
repository = "https://github.com/rootCircle/bgit"
description = "User-friendly Git wrapper for beginners, automating essential tasks like adding, committing, and pushing changes. It includes smart rules to avoid common pitfalls, such as accidentally adding sensitive files or directories and has exclusive support for portable hooks!"
categories = [
    "development-tools::testing",
    "command-line-utilities",
    "development-tools",
]
keywords = ["git", "beginner-friendly", "libgit-rs", "hooks", "smart-rules"]
rust-version = "1.88"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.57"
colored = "3.0.0"
dialoguer = "0.11.0"
env_logger = "0.11.8"
git2 = "0.20.2"
home = "0.5.9"
indicatif = "0.18.0"
log = "0.4.27"
regex = "1.11.1"
rig-core = "0.17.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
which = "8.0.0"
base64 = "0.22.1"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"

[target.'cfg(target_env = "musl")'.dependencies]
git2 = { version = "0.20.2", features = ["vendored-openssl"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
